k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app_name
  labels:
    app: app_name
spec:
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate                                   
    rollingUpdate: 
      maxUnavailable: 1                                   
      maxSurge: 1
  selector:
    matchLabels:
      app: app_name
  template:
    metadata:
      labels:
        app: app_name
    spec:
      containers:
      - name: echo-server
        image: aliatakan/app_name:app_version
        ports:
        - name: pod-port  
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 10  

---
apiVersion: v1
kind: Service
metadata:
  name: app_name
spec:
  selector:
    app: app_name
  ports:
    - port: 8080
      targetPort: pod-port
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: “true”
  name: app_name
spec:
  rules:
  - host: app_name.kubernetes.softbased.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app_name
          servicePort: 8080
  tls:
  - secretName: tls-prod-app_name-cert
    hosts:
    - app_name.kubernetes.softbased.com
